<resources>
    <string name="app_name">My Application</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_passwd">忘记密码？</string>
    <string name="register">注册</string>
    <string name="username_reg">用户名:</string>
    <string name="password_reg">密码:</string>
    <string name="confirm_passwd_reg">确认密码:</string>
    <string name="birth_reg">出生年月:</string>
    <string name="email_reg">邮箱:</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="login_faild">用户名或者密码错误</string>
    <string name="confirm_fail">两次输入密码不匹配</string>
    <string name="is_not_null">用户名或者密码不能为空</string>
</resources>
