<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_view_background"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:id="@+id/main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_background"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"/>

        <EditText
            android:id="@+id/password"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"/>

        <Button
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"/>
    </LinearLayout>

    <TextView
        android:layout_marginStart="50dp"
        android:id="@+id/register"
        android:layout_below="@id/main_login"
        android:layout_width="wrap_content"
        android:textColor="@color/corlorBlue"

        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/forget_passwd"
        android:layout_below="@id/main_login"
        android:layout_alignEnd="@id/forget_passwd"
        android:layout_alignParentEnd="true"
        android:textColor="@color/corlorBlue"
        android:layout_marginEnd="50dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/forget_passwd"/>
</RelativeLayout>
